Fix component spacing.

--- a/src/index.less
+++ b/src/index.less
@@ -4,10 +4,9 @@ html {
 
 body {
     height: 100%;
-    margin: 0;
+    margin: 16px;
 }
 
 #app {
-    display: flex;
     height: 100%;
 }
